# FSRM

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  BENCHMARK_FIX_SUMMARY.md  BENCHMARK_SUMMARY.md  BUILD_AND_TEST_REPORT.md  BUILD_FAILURE_RESOLUTION.md  BUILD_FIX_COMPLETE.md  BUILD_INSTRUCTIONS_WINDOWS.md  BUILD_REQUIREMENTS.md  CI_BUILD_FIX_INSTRUCTIONS.md  CI_BUILD_SUCCESS_REPORT.md  CI_ENVIRONMENT_FIX_SUMMARY.md  CLAUDE.md  CLOUD_SETUP_SUMMARY.md  CMakeLists.txt  DIRECTIONAL_WELLS_AND_RENAME_SUMMARY.md  DOCKER.md  Dockerfile  Dockerfile.ci  Dockerfile.cuda  Dockerfile.dev  ENHANCED_SIMULATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_BENCHMARK_STATUS.md  FINAL_DELIVERABLES.md  FINAL_PR_RESPONSE.md  FINAL_PR_SUMMARY.md  FINAL_SUMMARY.md  FSRM_COMPLETE_BENCHMARK_GUIDE.md  FSRM_claude_code_session1_solver.md  FSRM_claude_code_session2_solver.md  FSRM_claude_code_session3_solver.md  FSRM_claude_code_session_parallel_solver.md  GPU_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  ITERATION_COMPLETE.md  (+30 more)
examples/: CMakeLists.txt  README.md  README_COUPLED_2D.md  cascadia_tsunami.cpp  coulomb_stress_parallel_faults.cpp  egs_optimization.cpp  ex01_single_phase.cpp  ex_buckley_leverett_2d.cpp  ex_config_driven.cpp  ex_coupled_reservoir_2d.cpp  ex_gnuplot_solver.cpp  ex_hydraulic_fracturing.cpp  ex_induced_seismicity.cpp  ex_lefm_fracture_growth.cpp  ex_reservoir_2d_vertical.cpp  ex_reservoir_2d_vertical_enhanced.cpp  ex_stochastic_reservoir.cpp  ex_wave_propagation.cpp  fault_thm_induced_seismicity.cpp  gmsh_mesh_domains.cpp  induced_seismicity_imex.cpp  infrasound_propagation.cpp  kilauea_effusive.cpp  nuclear_airburst_effects.cpp  ocean_modeling.cpp  pinatubo_plinian.cpp  pylith_strike_slip_example.cpp  scec_loh1.cpp  scec_loh2.cpp  scec_loh3.cpp  scec_loh4.cpp  scec_tpv10.cpp  scec_tpv101.cpp  scec_tpv102.cpp  scec_tpv103.cpp  scec_tpv104.cpp  scec_tpv105.cpp  scec_tpv11.cpp  scec_tpv12.cpp  scec_tpv13.cpp  (+48 more)
examples/01_uniaxial_compression/: README.md  run.sh
examples/02_explosion_seismogram/: README.md  run.sh
examples/03_elastoplastic_compression/: README.md  run.sh
examples/04_locked_fault/: README.md  run.sh
examples/05_punggye_ri_nuclear_test/: README.md  run.sh
examples/06_gmsh_multimaterial/: README.md  run.sh
examples/07_traction_bc/: README.md  run.sh
examples/08_time_dependent_slip/: README.md  run.sh
examples/09_gasbuggy_1967/: README.md  run.sh
examples/10_gnome_1961/: README.md  run.sh
examples/11_sedan_1962/: README.md  run.sh
examples/12_degelen_mountain/: README.md  run.sh
examples/13_nts_pahute_mesa/: README.md  run.sh
examples/14_single_phase_flow/: README.md  config.config  run.sh
examples/15_viscoelastic_attenuation/: README.md  config.config  run.sh
examples/16_scec_tpv5/: README.md  config.config  run.sh
examples/17_velocity_model/: README.md  config.config  run.sh
examples/18_thermal_expansion/: README.md  config.config  run.sh
examples/19_rainier_1957/: README.md  run.sh
examples/20_salmon_1964/: README.md  run.sh
examples/21_sterling_1966/: README.md  run.sh
examples/22_long_shot_1965/: README.md  run.sh
examples/23_milrow_1969/: README.md  run.sh
examples/24_cannikin_1971/: README.md  run.sh
examples/25_faultless_1968/: README.md  run.sh
examples/26_baneberry_1970/: README.md  run.sh
examples/27_schooner_1968/: README.md  run.sh
examples/28_rulison_1969/: README.md  run.sh
examples/29_rio_blanco_1973/: README.md  run.sh
examples/30_chagan_1965/: README.md  run.sh
examples/31_azgir_a1_1966/: README.md  run.sh
examples/32_pokhran_i_1974/: README.md  run.sh
examples/33_dprk_2006/: README.md  run.sh
examples/34_dprk_2009/: README.md  run.sh
examples/35_dprk_2013/: README.md  run.sh
examples/36_dprk_2016a/: README.md  run.sh
examples/37_dprk_2016b/: README.md  run.sh
examples/38_lop_nor_1976/: README.md  run.sh
tests/: BUILD_COMPLETE.md  CMakeLists.txt  README.md  run_benchmarks.sh  run_tests.sh  test_convergence_mms.cpp  test_fracture_model.cpp  test_integration.cpp  test_main.cpp  test_main_gtest.cpp  test_mms_simple.cpp  test_performance.cpp  test_physics_detailed.cpp  test_physics_kernels.cpp  test_unit_system.cpp
tests/data/: test_simple.config
tests/experimental/: test_neural_stubs.cpp
tests/functional/: test_boundary_conditions.cpp  test_module_lifecycle.cpp  test_simulator_init.cpp  test_solver_convergence.cpp  test_well_operations.cpp
tests/integration/: sac_test_reader.hpp  test_absorbing_bc_layered.cpp  test_coupled_hydrofrac.cpp  test_coupled_physics.cpp  test_derived_fields.cpp  test_dprk_2017_comparison.cpp  test_dynamic_rupture_basic.cpp  test_dynamic_rupture_solve.cpp  test_elastoplastic_sim.cpp  test_explosion_fault_reactivation.cpp  test_explosion_seismogram.cpp  test_fault_absorbing_coexist.cpp  test_fracture_flow.cpp  test_fracture_propagation.cpp  test_full_simulation.cpp  test_gasbuggy_mesh.cpp  test_gmsh_import.cpp  test_gmsh_multimaterial.cpp  test_high_fidelity_integration.cpp  test_historic_nuclear.cpp  test_induced_seismicity.cpp  test_injection_pressure.cpp  test_injection_rupture_chain.cpp  test_layered_elastostatics.cpp  test_layered_q.cpp  test_leakoff_coupling.cpp  test_locked_fault.cpp  test_medium_plumbing.cpp  test_nearfield_coupled.cpp  test_nuclear_twin_gmsh.cpp  test_output_file.cpp  test_prescribed_slip.cpp  test_pressurized_fracture_fem.cpp  test_production_forecast.cpp  test_proppant_transport.cpp  test_punggye_ri_layered.cpp  test_restart.cpp  test_scec_tpv_benchmarks.cpp  test_sedan_1962_mesh.cpp  test_sedan_1962_run.cpp  (+12 more)
tests/performance/: README.md  test_analytical_benchmarks.cpp  test_benchmarks.cpp  test_explosion_source_benchmarks.cpp  test_gpu_acceleration.cpp  test_gpu_benchmarks.cpp  test_machine_learning_benchmarks.cpp  test_memory.cpp  test_memory_io_benchmarks.cpp  test_multiphase_benchmarks.cpp  test_physics_benchmarks.cpp  test_scaling.cpp  test_scec_benchmarks.cpp  test_scenario_benchmarks.cpp  test_solver_convergence_benchmarks.cpp  test_thermal_eor_benchmarks.cpp  (+2 more)
(+1119 files in other folders)
