# Examples CMakeLists
# All examples now run through config-driven executable with different config files

# Helper function to create examples
function(add_reservoir_example NAME SOURCE)
    add_executable(${NAME} ${SOURCE})
    target_link_libraries(${NAME} fsrmlib)
    
    # Install example data files
    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.DATA)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.DATA 
                      ${CMAKE_CURRENT_BINARY_DIR}/${NAME}.DATA COPYONLY)
    endif()
endfunction()

# Main config-driven executable - ALL examples run through this
add_reservoir_example(simulator ex_config_driven.cpp)

# SPE benchmarks (kept for validation/comparison)
add_reservoir_example(spe1 spe1.cpp)
add_reservoir_example(spe2 spe2.cpp)
add_reservoir_example(spe3 spe3.cpp)
add_reservoir_example(spe5 spe5.cpp)
add_reservoir_example(spe9 spe9.cpp)
add_reservoir_example(spe10 spe10.cpp)
add_reservoir_example(spe11 spe11.cpp)
add_reservoir_example(spe13 spe13.cpp)

# SCEC benchmarks (earthquake/seismicity simulation)
add_reservoir_example(scec_tpv5 scec_tpv5.cpp)
add_reservoir_example(scec_tpv10 scec_tpv10.cpp)
add_reservoir_example(scec_tpv11 scec_tpv11.cpp)
add_reservoir_example(scec_tpv14 scec_tpv14.cpp)
add_reservoir_example(scec_tpv16 scec_tpv16.cpp)
add_reservoir_example(scec_tpv24 scec_tpv24.cpp)
add_reservoir_example(scec_loh1 scec_loh1.cpp)
add_reservoir_example(scec_loh2 scec_loh2.cpp)
add_reservoir_example(scec_loh3 scec_loh3.cpp)

# Copy all config files to build directory
file(GLOB CONFIG_FILES "${CMAKE_SOURCE_DIR}/config/*.config")
foreach(CONFIG_FILE ${CONFIG_FILES})
    get_filename_component(FILENAME ${CONFIG_FILE} NAME)
    configure_file(${CONFIG_FILE} ${CMAKE_CURRENT_BINARY_DIR}/config/${FILENAME} COPYONLY)
endforeach()

# Copy data files
file(GLOB DATA_FILES "*.DATA" "*.INC")
foreach(DATA_FILE ${DATA_FILES})
    get_filename_component(FILENAME ${DATA_FILE} NAME)
    configure_file(${DATA_FILE} ${CMAKE_CURRENT_BINARY_DIR}/${FILENAME} COPYONLY)
endforeach()

# Display usage message
message(STATUS "===========================================================")
message(STATUS "Examples Build Configuration")
message(STATUS "===========================================================")
message(STATUS "Building config-driven simulator executable")
message(STATUS "")
message(STATUS "Usage:")
message(STATUS "  ./simulator -c config/<example>.config")
message(STATUS "")
message(STATUS "Available example configs:")
message(STATUS "  - config/single_phase.config")
message(STATUS "  - config/hydraulic_fracturing.config")
message(STATUS "  - config/lefm_fracture_growth.config")
message(STATUS "  - config/induced_seismicity.config")
message(STATUS "  - config/wave_propagation.config")
message(STATUS "  - config/geothermal.config")
message(STATUS "  - config/co2_storage.config")
message(STATUS "  - config/shale_reservoir.config")
message(STATUS "  - config/default.config")
message(STATUS "")
message(STATUS "SPE Benchmark configs (8 total):")
message(STATUS "  - config/spe1_benchmark.config (black oil)")
message(STATUS "  - config/spe2_benchmark.config (three-phase coning)")
message(STATUS "  - config/spe3_benchmark.config (compositional)")
message(STATUS "  - config/spe5_benchmark.config (volatile oil/gas)")
message(STATUS "  - config/spe9_benchmark.config (heterogeneous)")
message(STATUS "  - config/spe10_benchmark.config (large-scale)")
message(STATUS "  - config/spe11_benchmark.config (CO2 storage)")
message(STATUS "  - config/spe13_benchmark.config (well controls)")
message(STATUS "")
message(STATUS "SCEC Benchmark configs (9 total):")
message(STATUS "  - config/scec_tpv5.config (strike-slip rupture)")
message(STATUS "  - config/scec_tpv10.config (branching fault)")
message(STATUS "  - config/scec_tpv11.config (supershear rupture)")
message(STATUS "  - config/scec_tpv14.config (bimaterial fault)")
message(STATUS "  - config/scec_tpv16.config (rough fault)")
message(STATUS "  - config/scec_tpv24.config (dynamic triggering)")
message(STATUS "  - config/scec_loh1.config (layer over halfspace)")
message(STATUS "  - config/scec_loh2.config (basin edge effects)")
message(STATUS "  - config/scec_loh3.config (layered medium)")
message(STATUS "")
message(STATUS "All examples now use HDF5 output by default")
message(STATUS "Use VTK for legacy visualization if needed")
message(STATUS "===========================================================")
