# Examples CMakeLists
# All examples now run through config-driven executable with different config files

# Helper function to create examples
function(add_reservoir_example NAME SOURCE)
    add_executable(${NAME} ${SOURCE})
    target_link_libraries(${NAME} fsrmlib)
    
    # Install example data files
    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.DATA)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.DATA 
                      ${CMAKE_CURRENT_BINARY_DIR}/${NAME}.DATA COPYONLY)
    endif()
endfunction()

# Main config-driven executable - ALL examples run through this
add_reservoir_example(simulator ex_config_driven.cpp)

# SPE benchmarks (complete suite)
add_reservoir_example(spe1 spe1.cpp)
add_reservoir_example(spe2 spe2.cpp)
add_reservoir_example(spe3 spe3.cpp)
add_reservoir_example(spe4 spe4.cpp)
add_reservoir_example(spe5 spe5.cpp)
add_reservoir_example(spe6 spe6.cpp)
add_reservoir_example(spe7 spe7.cpp)
add_reservoir_example(spe8 spe8.cpp)
add_reservoir_example(spe9 spe9.cpp)
add_reservoir_example(spe10 spe10.cpp)
add_reservoir_example(spe11 spe11.cpp)

# SCEC benchmarks (earthquake/seismicity simulation - complete suite)
add_reservoir_example(scec_tpv3 scec_tpv3.cpp)
add_reservoir_example(scec_tpv4 scec_tpv4.cpp)
add_reservoir_example(scec_tpv5 scec_tpv5.cpp)
add_reservoir_example(scec_tpv10 scec_tpv10.cpp)
add_reservoir_example(scec_tpv12 scec_tpv12.cpp)
add_reservoir_example(scec_tpv16 scec_tpv16.cpp)
add_reservoir_example(scec_tpv24 scec_tpv24.cpp)
add_reservoir_example(scec_tpv101 scec_tpv101.cpp)
add_reservoir_example(scec_loh1 scec_loh1.cpp)
add_reservoir_example(scec_loh2 scec_loh2.cpp)

# Induced seismicity with IMEX transition
add_reservoir_example(induced_seismicity_imex induced_seismicity_imex.cpp)

# Unit converter utility
add_reservoir_example(unit_converter unit_converter.cpp)

# Copy all config files to build directory
file(GLOB CONFIG_FILES "${CMAKE_SOURCE_DIR}/config/*.config")
foreach(CONFIG_FILE ${CONFIG_FILES})
    get_filename_component(FILENAME ${CONFIG_FILE} NAME)
    configure_file(${CONFIG_FILE} ${CMAKE_CURRENT_BINARY_DIR}/config/${FILENAME} COPYONLY)
endforeach()

# Copy data files
file(GLOB DATA_FILES "*.DATA" "*.INC")
foreach(DATA_FILE ${DATA_FILES})
    get_filename_component(FILENAME ${DATA_FILE} NAME)
    configure_file(${DATA_FILE} ${CMAKE_CURRENT_BINARY_DIR}/${FILENAME} COPYONLY)
endforeach()

# Display usage message
message(STATUS "===========================================================")
message(STATUS "Examples Build Configuration")
message(STATUS "===========================================================")
message(STATUS "Building config-driven simulator executable")
message(STATUS "")
message(STATUS "Usage:")
message(STATUS "  ./simulator -c config/<example>.config")
message(STATUS "")
message(STATUS "Available example configs:")
message(STATUS "  - config/single_phase.config")
message(STATUS "  - config/hydraulic_fracturing.config")
message(STATUS "  - config/lefm_fracture_growth.config")
message(STATUS "  - config/induced_seismicity.config")
message(STATUS "  - config/induced_seismicity_imex.config  (IMEX transition)")
message(STATUS "  - config/wave_propagation.config")
message(STATUS "  - config/geothermal.config")
message(STATUS "  - config/co2_storage.config")
message(STATUS "  - config/shale_reservoir.config")
message(STATUS "  - config/default.config")
message(STATUS "")
message(STATUS "SPE Benchmark configs (complete suite):")
message(STATUS "  - config/spe1_benchmark.config  (black oil)")
message(STATUS "  - config/spe2_benchmark.config  (three-phase coning)")
message(STATUS "  - config/spe3_benchmark.config  (gas cycling)")
message(STATUS "  - config/spe4_benchmark.config  (EOS testing)")
message(STATUS "  - config/spe5_benchmark.config  (miscible CO2 flood)")
message(STATUS "  - config/spe6_benchmark.config  (dual-porosity)")
message(STATUS "  - config/spe7_benchmark.config  (horizontal well)")
message(STATUS "  - config/spe8_benchmark.config  (gridding/upscaling)")
message(STATUS "  - config/spe9_benchmark.config  (North Sea model)")
message(STATUS "  - config/spe10_benchmark.config (large heterogeneous)")
message(STATUS "  - config/spe11_benchmark.config (CO2 storage)")
message(STATUS "  - config/spe11a_benchmark.config (CO2 storage - Case A small)")
message(STATUS "  - config/spe11c_benchmark.config (CO2 storage - Case C 3D)")
message(STATUS "")
message(STATUS "SCEC Benchmark configs (complete suite):")
message(STATUS "  - config/scec_tpv3.config   (2D strike-slip)")
message(STATUS "  - config/scec_tpv4.config   (rate-state friction)")
message(STATUS "  - config/scec_tpv5.config   (3D dynamic rupture)")
message(STATUS "  - config/scec_tpv10.config  (branching fault)")
message(STATUS "  - config/scec_tpv12.config  (60° dipping normal)")
message(STATUS "  - config/scec_tpv13.config  (dipping + rate-state)")
message(STATUS "  - config/scec_tpv16.config  (rough fault)")
message(STATUS "  - config/scec_tpv24.config  (Japan benchmark)")
message(STATUS "  - config/scec_tpv25.config  (Japan heterogeneous)")
message(STATUS "  - config/scec_tpv101.config (viscoelastic plasticity)")
message(STATUS "  - config/scec_loh1.config   (wave propagation)")
message(STATUS "  - config/scec_loh2.config   (layered heterogeneous)")
message(STATUS "")
message(STATUS "All examples now use HDF5 output by default")
message(STATUS "Use VTK for legacy visualization if needed")
message(STATUS "===========================================================")
