# Examples CMakeLists
# All examples now run through config-driven executable with different config files

# Helper function to create examples
function(add_reservoir_example NAME SOURCE)
    add_executable(${NAME} ${SOURCE})
    target_link_libraries(${NAME} fsrmlib)
    
    # Install example data files
    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.DATA)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${NAME}.DATA 
                      ${CMAKE_CURRENT_BINARY_DIR}/${NAME}.DATA COPYONLY)
    endif()
endfunction()

# Main config-driven executable - ALL examples run through this
add_reservoir_example(simulator ex_config_driven.cpp)

# SPE benchmarks (complete suite)
add_reservoir_example(spe1 spe1.cpp)
add_reservoir_example(spe2 spe2.cpp)
add_reservoir_example(spe3 spe3.cpp)
add_reservoir_example(spe4 spe4.cpp)
add_reservoir_example(spe5 spe5.cpp)
add_reservoir_example(spe6 spe6.cpp)
add_reservoir_example(spe7 spe7.cpp)
add_reservoir_example(spe8 spe8.cpp)
add_reservoir_example(spe9 spe9.cpp)
add_reservoir_example(spe10 spe10.cpp)
add_reservoir_example(spe11 spe11.cpp)

# SCEC benchmarks (earthquake/seismicity simulation - complete suite)
# TPV series - dynamic rupture benchmarks
add_reservoir_example(scec_tpv3 scec_tpv3.cpp)
add_reservoir_example(scec_tpv4 scec_tpv4.cpp)
add_reservoir_example(scec_tpv5 scec_tpv5.cpp)
add_reservoir_example(scec_tpv6 scec_tpv6.cpp)
add_reservoir_example(scec_tpv7 scec_tpv7.cpp)
add_reservoir_example(scec_tpv8 scec_tpv8.cpp)
add_reservoir_example(scec_tpv9 scec_tpv9.cpp)
add_reservoir_example(scec_tpv10 scec_tpv10.cpp)
add_reservoir_example(scec_tpv11 scec_tpv11.cpp)
add_reservoir_example(scec_tpv12 scec_tpv12.cpp)
add_reservoir_example(scec_tpv13 scec_tpv13.cpp)
add_reservoir_example(scec_tpv14 scec_tpv14.cpp)
add_reservoir_example(scec_tpv15 scec_tpv15.cpp)
add_reservoir_example(scec_tpv16 scec_tpv16.cpp)
add_reservoir_example(scec_tpv17 scec_tpv17.cpp)
add_reservoir_example(scec_tpv18 scec_tpv18.cpp)
add_reservoir_example(scec_tpv19 scec_tpv19.cpp)
add_reservoir_example(scec_tpv20 scec_tpv20.cpp)
add_reservoir_example(scec_tpv21 scec_tpv21.cpp)
add_reservoir_example(scec_tpv22 scec_tpv22.cpp)
add_reservoir_example(scec_tpv23 scec_tpv23.cpp)
add_reservoir_example(scec_tpv24 scec_tpv24.cpp)
add_reservoir_example(scec_tpv25 scec_tpv25.cpp)
add_reservoir_example(scec_tpv26 scec_tpv26.cpp)
add_reservoir_example(scec_tpv27 scec_tpv27.cpp)
add_reservoir_example(scec_tpv28 scec_tpv28.cpp)
add_reservoir_example(scec_tpv29 scec_tpv29.cpp)
add_reservoir_example(scec_tpv30 scec_tpv30.cpp)
add_reservoir_example(scec_tpv31 scec_tpv31.cpp)
add_reservoir_example(scec_tpv32 scec_tpv32.cpp)
add_reservoir_example(scec_tpv33 scec_tpv33.cpp)
add_reservoir_example(scec_tpv34 scec_tpv34.cpp)
add_reservoir_example(scec_tpv35 scec_tpv35.cpp)
add_reservoir_example(scec_tpv36 scec_tpv36.cpp)
add_reservoir_example(scec_tpv37 scec_tpv37.cpp)
# TPV100+ series - inelastic benchmarks
add_reservoir_example(scec_tpv101 scec_tpv101.cpp)
add_reservoir_example(scec_tpv102 scec_tpv102.cpp)
add_reservoir_example(scec_tpv103 scec_tpv103.cpp)
add_reservoir_example(scec_tpv104 scec_tpv104.cpp)
add_reservoir_example(scec_tpv105 scec_tpv105.cpp)
# LOH series - wave propagation benchmarks
add_reservoir_example(scec_loh1 scec_loh1.cpp)
add_reservoir_example(scec_loh2 scec_loh2.cpp)
add_reservoir_example(scec_loh3 scec_loh3.cpp)
add_reservoir_example(scec_loh4 scec_loh4.cpp)

# Induced seismicity with IMEX transition
add_reservoir_example(induced_seismicity_imex induced_seismicity_imex.cpp)

# Coulomb stress distribution from parallel faults
add_reservoir_example(coulomb_stress_parallel_faults coulomb_stress_parallel_faults.cpp)

# PyLith-style fault representation example
add_reservoir_example(pylith_strike_slip_example pylith_strike_slip_example.cpp)

# THM fault induced seismicity example
add_reservoir_example(fault_thm_induced_seismicity fault_thm_induced_seismicity.cpp)

# Unit converter utility
add_reservoir_example(unit_converter unit_converter.cpp)

# Well spacing and hydraulic fracture placement optimization
add_reservoir_example(well_spacing_optimization well_spacing_optimization.cpp)

# Enhanced Geothermal System (EGS) optimization with stochastic subsurface
add_reservoir_example(egs_optimization egs_optimization.cpp)

# Tsunami modeling - Cascadia M9.0 earthquake and tsunami
add_reservoir_example(cascadia_tsunami cascadia_tsunami.cpp)

# Underground explosion with near-field damage physics
add_reservoir_example(underground_explosion_near_field underground_explosion_near_field.cpp)

# Volcano modeling examples
add_reservoir_example(pinatubo_plinian pinatubo_plinian.cpp)
add_reservoir_example(kilauea_effusive kilauea_effusive.cpp)
add_reservoir_example(volcanic_unrest_monitoring volcanic_unrest_monitoring.cpp)

# Copy all config files to build directory
file(GLOB CONFIG_FILES "${CMAKE_SOURCE_DIR}/config/*.config")
foreach(CONFIG_FILE ${CONFIG_FILES})
    get_filename_component(FILENAME ${CONFIG_FILE} NAME)
    configure_file(${CONFIG_FILE} ${CMAKE_CURRENT_BINARY_DIR}/config/${FILENAME} COPYONLY)
endforeach()

# Copy data files
file(GLOB DATA_FILES "*.DATA" "*.INC")
foreach(DATA_FILE ${DATA_FILES})
    get_filename_component(FILENAME ${DATA_FILE} NAME)
    configure_file(${DATA_FILE} ${CMAKE_CURRENT_BINARY_DIR}/${FILENAME} COPYONLY)
endforeach()

# Display usage message
message(STATUS "===========================================================")
message(STATUS "Examples Build Configuration")
message(STATUS "===========================================================")
message(STATUS "Building config-driven simulator executable")
message(STATUS "")
message(STATUS "Usage:")
message(STATUS "  ./simulator -c config/<example>.config")
message(STATUS "")
message(STATUS "Available example configs:")
message(STATUS "  - config/single_phase.config")
message(STATUS "  - config/hydraulic_fracturing.config")
message(STATUS "  - config/lefm_fracture_growth.config")
message(STATUS "  - config/induced_seismicity.config")
message(STATUS "  - config/induced_seismicity_imex.config  (IMEX transition)")
message(STATUS "  - config/coulomb_stress_parallel_faults.config  (Coulomb stress)")
message(STATUS "  - config/wave_propagation.config")
message(STATUS "  - config/geothermal.config")
message(STATUS "  - config/co2_storage.config")
message(STATUS "  - config/shale_reservoir.config")
message(STATUS "  - config/default.config")
message(STATUS "")
message(STATUS "SPE Benchmark configs (complete suite):")
message(STATUS "  - config/spe1_benchmark.config  (black oil)")
message(STATUS "  - config/spe2_benchmark.config  (three-phase coning)")
message(STATUS "  - config/spe3_benchmark.config  (gas cycling)")
message(STATUS "  - config/spe4_benchmark.config  (EOS testing)")
message(STATUS "  - config/spe5_benchmark.config  (miscible CO2 flood)")
message(STATUS "  - config/spe6_benchmark.config  (dual-porosity)")
message(STATUS "  - config/spe7_benchmark.config  (horizontal well)")
message(STATUS "  - config/spe8_benchmark.config  (gridding/upscaling)")
message(STATUS "  - config/spe9_benchmark.config  (North Sea model)")
message(STATUS "  - config/spe10_benchmark.config (large heterogeneous)")
message(STATUS "  - config/spe11_benchmark.config (CO2 storage)")
message(STATUS "  - config/spe11a_benchmark.config (CO2 storage - Case A small)")
message(STATUS "  - config/spe11c_benchmark.config (CO2 storage - Case C 3D)")
message(STATUS "")
message(STATUS "SCEC Benchmark configs (complete CVWS suite):")
message(STATUS "  TPV series - Dynamic Rupture:")
message(STATUS "  - scec_tpv3.config   (2D in-plane)")
message(STATUS "  - scec_tpv4.config   (rate-state VW/VS)")
message(STATUS "  - scec_tpv5.config   (3D vertical strike-slip)")
message(STATUS "  - scec_tpv6.config   (3D bilateral)")
message(STATUS "  - scec_tpv7.config   (VS barrier)")
message(STATUS "  - scec_tpv8.config   (rate-dependent)")
message(STATUS "  - scec_tpv9.config   (depth-dependent stress)")
message(STATUS "  - scec_tpv10.config  (branching fault)")
message(STATUS "  - scec_tpv11.config  (normal faulting)")
message(STATUS "  - scec_tpv12.config  (60° dipping slip-weakening)")
message(STATUS "  - scec_tpv13.config  (60° dipping rate-state)")
message(STATUS "  - scec_tpv14.config  (branch - main dominant)")
message(STATUS "  - scec_tpv15.config  (branch - branch dominant)")
message(STATUS "  - scec_tpv16.config  (rough fault)")
message(STATUS "  - scec_tpv17.config  (supershear transition)")
message(STATUS "  - scec_tpv18.config  (layered medium)")
message(STATUS "  - scec_tpv19.config  (self-healing pulse)")
message(STATUS "  - scec_tpv20.config  (shallow dip-slip SW)")
message(STATUS "  - scec_tpv21.config  (shallow dip-slip RS)")
message(STATUS "  - scec_tpv22.config  (bilateral SW)")
message(STATUS "  - scec_tpv23.config  (bilateral RS)")
message(STATUS "  - scec_tpv24.config  (Japan homogeneous)")
message(STATUS "  - scec_tpv25.config  (Japan heterogeneous)")
message(STATUS "  - scec_tpv26.config  (thermal pressurization)")
message(STATUS "  - scec_tpv27.config  (thermal press. hetero.)")
message(STATUS "  - scec_tpv28.config  (T-junction)")
message(STATUS "  - scec_tpv29.config  (topography)")
message(STATUS "  - scec_tpv30.config  (heterogeneous stress)")
message(STATUS "  - scec_tpv31.config  (friction heterogeneity)")
message(STATUS "  - scec_tpv32.config  (normal fault SW)")
message(STATUS "  - scec_tpv33.config  (normal fault RS)")
message(STATUS "  - scec_tpv34.config  (off-fault plasticity)")
message(STATUS "  - scec_tpv35.config  (plasticity hetero.)")
message(STATUS "  - scec_tpv36.config  (bimaterial SW)")
message(STATUS "  - scec_tpv37.config  (bimaterial RS)")
message(STATUS "  TPV100+ series - Inelastic:")
message(STATUS "  - scec_tpv101.config (viscoelastic plasticity)")
message(STATUS "  - scec_tpv102.config (enhanced plasticity)")
message(STATUS "  - scec_tpv103.config (RS + plasticity)")
message(STATUS "  - scec_tpv104.config (viscoplasticity)")
message(STATUS "  - scec_tpv105.config (damage mechanics)")
message(STATUS "  LOH series - Wave Propagation:")
message(STATUS "  - scec_loh1.config   (layer over halfspace)")
message(STATUS "  - scec_loh2.config   (heterogeneous layer)")
message(STATUS "  - scec_loh3.config   (attenuation)")
message(STATUS "  - scec_loh4.config   (multiple layers)")
message(STATUS "")
message(STATUS "PyLith-style fault configs:")
message(STATUS "  - pylith_fault_kinematic.config  (prescribed slip rupture)")
message(STATUS "  - pylith_fault_dynamic.config    (spontaneous rupture)")
message(STATUS "")
message(STATUS "THM-coupled fault configs:")
message(STATUS "  - fault_thm_induced_seismicity.config  (induced seismicity with THM)")
message(STATUS "")
message(STATUS "Optimization configs:")
message(STATUS "  - well_spacing_optimization.config  (well spacing & frac placement)")
message(STATUS "  - egs_optimization.config           (EGS multi-objective optimization)")
message(STATUS "")
message(STATUS "Tsunami modeling configs:")
message(STATUS "  - cascadia_m9_tsunami.config  (Cascadia M9.0 earthquake tsunami)")
message(STATUS "  Scenarios: full_margin, southern, northern, central, worst_case")
message(STATUS "")
message(STATUS "Underground explosion configs (near-field physics):")
message(STATUS "  - underground_nuclear_test.config        (basic nuclear test)")
message(STATUS "  - underground_nuclear_test_1kt_shallow.config (low-yield shallow test)")
message(STATUS "  - underground_nuclear_test_decoupled_salt_10kt.config (decoupled salt cavity)")
message(STATUS "  - underground_explosion_near_field.config (full near-field damage)")
message(STATUS "  - underground_explosion_near_field_1kt_shallow.config (near-field: 1 kt shallow)")
message(STATUS "  - underground_explosion_near_field_decoupled_salt_10kt.config (near-field: decoupled salt)")
message(STATUS "  - atmospheric_nuclear_test.config        (surface/air burst)")
message(STATUS "  - atmospheric_nuclear_test_surface_fallout_50kt.config (surface burst: fallout)")
message(STATUS "  - atmospheric_nuclear_test_high_altitude_emp_1400kt.config (high altitude: EMP)")
message(STATUS "  - historical_gasbuggy_1967_site_geology_gmsh.config (Gasbuggy site geology + CRS)")
message(STATUS "  - historical_gnome_1961_site_geology_salt_gmsh.config (Gnome salt site geology + CRS)")
message(STATUS "  - historical_sedan_1962_site_geology_cratering.config (Sedan site geology + CRS)")
message(STATUS "  - historical_starfish_prime_1962_high_altitude_emp.config (Starfish Prime context)")
message(STATUS "  - historical_faultless_1968_fault_network_induced_seismicity.config (Faultless fault network + induced seismicity)")
message(STATUS "  - impact_event.config                    (asteroid impact)")
message(STATUS "  Features: cavity formation, damage zones, spall, seismic source")
message(STATUS "  References: CRAM3D methodology, NTS empirical relations")
message(STATUS "")
message(STATUS "Volcano modeling examples (fully coupled):")
message(STATUS "  - pinatubo_plinian          (VEI-6 Plinian eruption)")
message(STATUS "  - kilauea_effusive          (Hawaiian basaltic lava flow)")
message(STATUS "  - volcanic_unrest_monitoring (pre-eruption monitoring signals)")
message(STATUS "  Features: magma chamber, conduit flow, eruption column,")
message(STATUS "            PDCs, lava flows, deformation, seismicity, gas, tephra")
message(STATUS "  Benchmarks: volcano_plinian_column.config,")
message(STATUS "              volcano_mogi_deformation.config,")
message(STATUS "              volcano_lava_flow.config,")
message(STATUS "              volcano_pdc_runout.config")
message(STATUS "")
message(STATUS "All examples now use HDF5 output by default")
message(STATUS "Use VTK for legacy visualization if needed")
message(STATUS "===========================================================")
